[package]
name = "png_chunks_viewer"
version = "0.0.0"
authors = ["KoharaKazuya"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.51"
js-sys = "0.3.28"
combine = "3.8.1"

[dependencies.web-sys]
version = "0.3.28"
features = [
  'Blob',
  'console',
  'Document',
  'Element',
  'FileReader',
  'Node',
  'Window',
]
